--- a/index.html
+++ b/index.html
@@ -4,19 +4,34 @@
     <meta charset="UTF-8">
    
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Oakkand</title>
+ 
 </head>
 <body>
     <header class="main-header">
-        <nav>
+        <nav class="nav main-nav">
             <ul>
                 <li><a href="home.html">HOME</a></li>
                 <li><a href="store.html">STORE</a></li>
                 <li><a href="about.html">ABOUT</a></li>
             </u>
         </nav>
-        <h1>Welcome</h1>
+        <h1 class="head-title title-large">Oakland 
+        </h1>
+        <div style="color: white; text-align: center;">Your Future Agency</h1>
     </header>
+
+<h3 class="header">Introduction</h3>
+
+<section class="content">
+
     
+   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut convallis urna vitae nulla blandit varius. Phasellus rhoncus nibh elit, vel maximus metus tempor et. Cras magna dui, ornare sollicitudin enim ut, tristique bibendum libero. Vestibulum quis nulla nec nisi volutpat venenatis sed in dolor. Sed molestie arcu sit amet nisi tincidunt, a ullamcorper diam scelerisque. Nullam turpis velit, tincidunt non commodo vitae, aliquam et diam. Suspendisse lorem mauris, malesuada sit amet turpis vel, accumsan auctor velit. Sed malesuada metus vitae augue molestie gravida. Fusce ex purus, finibus laoreet tortor ac, cursus sollicitudin ante. Cras mollis nunc eu tellus sollicitudin fringilla. Vestibulum in congue nisl. Maecenas vestibulum purus libero, et congue ex semper a. Phasellus euismod nibh sit amet nisi congue semper.</p>
+
+   <p>Quisque eu lectus nulla. In lobortis velit sed luctus semper. Suspendisse tincidunt, mauris ut tempus accumsan, massa est semper libero, quis aliquam velit velit eu lorem. Integer consequat neque id dui semper cursus. Vestibulum auctor lorem venenatis, sollicitudin nunc dictum, sollicitudin diam. In in dui ipsum. Morbi at metus ac mauris tempus laoreet in ut urna. Curabitur gravida felis ut ante sollicitudin, vel porta nibh hendrerit. Quisque consequat diam et enim tincidunt venenatis. Integer in aliquam enim. Vestibulum sagittis magna dolor, ac porttitor justo suscipit vel. Pellentesque auctor faucibus ullamcorper. Suspendisse lorem augue, rutrum non tristique sit amet, semper at est. Suspendisse lacinia bibendum elit egestas tristique.</p>
+  
+</section>
+
 </body>
 </html>
+
